k8s/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pipeline-test
  name: pipeline-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipeline-test
  template:
    metadata:
      labels:
        app: pipeline-test
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/default/pipeline-test:latest
          imagePullPolicy: Always
          name: pipeline-test
          ports:
            - containerPort: 8080
              protocol: TCP
