k8s/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pipeline-test
  name: pipeline-test
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: pipeline-test
    weight: 100
